Change height to min-height . This allows  guesses to wrap correctly.

--- a/styles/style.css
+++ b/styles/style.css
@@ -297,18 +297,21 @@ input:focus {
 }
 
 .guessBox {
-	height: 80px;
+	min-height: 80px;
 	margin: 10px auto 0;
 	background: #11a8ab;
 	padding: 0.5em;
 	/* display: block; */
-	line-height: 2em;
+	/*line-height: 1em;*/
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 	color: #fff;
-	 overflow: auto; 
 	display: flex;
-
+	flex-wrap: wrap;
+	justify-content: center;
+	align-content: center;
+	flex: shrink;
+	flex-basis: auto;
 }
 .guesses {
 	/* display: inline; */
@@ -321,8 +324,8 @@ input:focus {
 	margin: 0.2em;
 	color: #fff;
 	display: flex;
-	min-width: 2rem; 
+	min-width: 1rem; 
 	justify-content: center;
-	flex-wrap: wrap;
-
+	flex-basis: auto;
+	height: 1.75em;
 }
